# FlyProjection

./: .gitignore  README.md  mkdocs.yml  push_script.sh  pyproject.toml  tracking_config.json  trajectories.csv
analysis/: process_bands.ipynb  process_thin_trails.ipynb  process_ying-yang-oc.ipynb
analysis/20hr-wingless-orco-yy/: analysis.ipynb  arena.json  video_gen.ipynb  yang_props.json  ying_props.json
analysis/20hrs-wingless-orcoctrl-yy2024-04-26_13-24/: analysis.ipynb  video_gen.ipynb
analysis/OLD METHOD/: analysis.ipynb
analysis/simulation/: analysis.ipynb  simulation.ipynb  test.ipynb
configs/: rig_config.json
configs/archived_configs/: rig_config_20240416120834.json  rig_config_20240419111528.json
deprecated/: rig-reconfig copy.py
deprecated/flyprojection/: main.py  rig_configuration.py  utils.py
deprecated/scripts/: rig-reconfig.py  rig_configuration_hwaccel.py
experiments/: closed_loop_chord_blueback.py  closed_loop_thick_trail_blueback.py  closed_loop_thin_trail_blueback.py  closed_loop_trail_blueback.py  closed_loop_trail_blueback_nolasso_dynamic.py  closed_loop_trail_noblueback.py  closed_loop_trail_noblueback_nolasso_dynamic.py  closed_loop_trail_surround.py  closed_loop_trail_surround_nolasso.py  open_loop_trail_blueback copy.py  open_loop_trail_nolasso copy.py  open_loop_trail_nolasso.py  open_loop_trail_nolasso_dynamic copy.py  open_loop_trail_nolasso_dynamic_mult.py  skeleton.py  test.py  test_locator.py
experiments/blindness_verification/: closed_loop_trail_alternation.py
experiments/dual_band/: config.py  experiment_logic.py
experiments/dual_trail/: config.py  experiment_logic.py
experiments/multi_trail_ece/: config.py  experiment_logic.py
experiments/multi_trail_mov/: config.py  experiment_logic.py
experiments/ortho_circle/: config.py  experiment_logic.py
experiments/patches/: config.py  experiment_logic.py
experiments/random_flash/: config.py  experiment_logic.py
experiments/yin_yang/: config.py  experiment_logic.py
flyprojection/: __init__.py  config.py  main.py  rdp_client.py  reanalysis.py  rig-reconfig.py  rig_configuration.py  rig_configuration_hwaccel.py  utils.py  webapp.py
scripts/: focus.py  rig_configuration-test.py  rig_configuration.py
tests/: GUItest.py  basler_camera.py  camera_test.ipynb  cleaned_trajectory_test.py  closed_loop_test.py  error.txt  flytracking_test.ipynb  fps.npy  gpu_memory.npy  gpu_test.ipynb  led_test.py  masking_test.py  pathintersecttest.ipynb  test.py  trajectory_test.py
(+85 files in other folders)
