[tool.poetry]
name = "flyprojection"
version = "0.1.0"
description = ""
authors = ["Rishika Mohanta <neurorishika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.5.2"
lazy-loader = "^0.4"
numpy = "^1.24.4"
matplotlib = "3.7.5"
scikit-video = "^1.1.11"
scikit-image = "0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
