[tool.poetry]
name = "flyprojection"
version = "0.1.0"
description = ""
authors = ["Rishika Mohanta <neurorishika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pygame = "^2.5.2"
lazy-loader = "^0.4"
numpy = "^1.24.4"
matplotlib = "^3.7.5"
scikit-video = "^1.1.11"
scikit-image = "^0.21.0"
pip = "^24.1.2"
pypylon = "^4.0.0"
pandas = "^2.0.3"
jupyter = "^1.0.0"
ipython = "^8.14.0"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
argparse = "^1.4.0"
mkinit = "^1.0.0"
cryptography = "^41.0.2"
split-file-reader = "^0.1.4"
statannotations = "^0.5.0"
joblib = "^1.3.1"
tqdm = "^4.65.0"
python-kasa = "^0.7.0.5"
pyside2 = "5.13.2"
pyqtgraph = "0.12.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
