[tool.poetry]
name = "flyprojection"
version = "0.1.0"
description = ""
authors = ["Rishika Mohanta <neurorishika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tqdm = "^4.65.0"
statannotations = "^0.5.0"
split-file-reader = "^0.1.4"
scipy = "1.9.0"
scikit-video = "^1.1.11"
scikit-learn = "1.0.2"
scikit-image = "0.19.3"
scikit-guess = "^0.0.1a0"
redis = "^5.0.8"
python-kasa = "^0.7.0.5"
pyside2 = "5.13.2"
pyqtgraph = "0.12.4"
pypylon = "^4.0.0"
pygame = "^2.5.2"
pycairo = "^1.27.0"
pip = "^24.1.2"
pandas = "^1.0.0"
numpy = "1.22.4"
numba = "^0.60.0"
mkinit = "^1.0.0"
mkdocstrings-python = "^1.12.2"
mkdocs-material = "^9.5.48"
matplotlib = "^3.7.5"
lazy-loader = "^0.4"
kornia = "^0.7.4"
jupyter = "^1.0.0"
jsonschema = "^4.17.3"
joblib = "^1.3.1"
ipython = "^8.14.0"
ipykernel = "^6.29.5"
hdf5plugin = "^5.0.0"
h5py = "^3.12.1"
flask = "^3.0.3"
cryptography = "^41.0.2"
attrs = "^21.4.0"
argparse = "^1.4.0"
apriltag = "^0.0.16"
sortedcontainers = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
